--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -20,6 +20,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link href="css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/roundslider.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <title>Tranqui</title>
 </head>
@@ -111,6 +112,7 @@
 						</div>
 					</div>
 					<div class="circle audioBorde ab_med_ini"></div>
+					<div id="med_ini_control" class="circuloN"></div>
 					<audio ontimeupdate="updateBar('med_ini')" id="med_ini">
 						<source src="" type="audio/mpeg">
 						Su navegador no sorporta audio HTML5
@@ -501,6 +503,7 @@
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/circle-progress.min.js"></script>
+    <script type="text/javascript" src="js/roundslider.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript">
         app.initialize();
