--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -177,6 +177,7 @@
 							</div>
 						</div>
 					</div>
+					<div class="mensajesutil" id="msjconf"></div>
 					<div class="saltarVid2 btnSinborde btnFinalizarConf">Finalizar ></div>
 				</div>
 			</div>
