puta que lo pario

--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -426,7 +426,7 @@
 						<div class="volverint btnSinborde btnGetCupon">enviar »</div>
 					</div>
 					<div class="contclases"></div>
-					<div class="volverint btnSinborde linkdeboton"><a href="#" onclick="window.open('https://www.mindfulnessbuenosaires.com/programas-mbsr', '_system'); return false;" target="_blank">Cursos presenciales</a></div>
+					<div class="volverint btnSinborde linkdeboton"><a href="#" onclick="window.open('https://www.mindfulnessbuenosaires.com/programas-mbsr', '_system'); return false;" target="_blank">Próximos programas</a></div>
 					<div class="bototneraBottom">
 						<div class="boxprem"><img src="img/boxpremium.png"></div>
 						<div class="btotonbotom btnHome"><i class="icon-iconHome"></i> Home</div>
