--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -293,7 +293,9 @@
 					<div class="todospods">
 					</div>
 					<div class="bototneraBottom conpub">
+<!--
 						<div class="boxprem"><img src="img/boxpremium.png"></div>
+-->
 						<div class="btotonbotom btnHome"><i class="icon-iconHome"></i> Home</div>
 						<div class="btotonbotom btnLibreria"><i class="icon-iconLibreria fz22"></i> Libreria</div>
 						<div class="btotonbotom btnMSBR"><i class="icon-iconMBSR fz22"></i> MSBR</div>
@@ -385,7 +387,9 @@
 					</div>
 					<div class="volverint btnSinborde btnVolverHome">Volver</div>
 					<div class="bototneraBottom">
+<!--
 						<div class="boxprem"><img src="img/boxpremium.png"></div>
+-->
 						<div class="btotonbotom btnHome"><i class="icon-iconHome"></i> Home</div>
 						<div class="btotonbotom btnLibreria"><i class="icon-iconLibreria fz22"></i> Libreria</div>
 						<div class="btotonbotom btnMSBR"><i class="icon-iconMBSR fz22"></i> MSBR</div>
@@ -405,10 +409,11 @@
 						<div class="text_mb_1"></div>
 						<div class="text_mb_2"></div>
 					</div>
-					<div class="volverint btnSinborde btnSigPantMBSR">Saltar »</div>
-					<div class="checkB"><input type="checkbox" id="nomostrarmbsrintro"> no volver a mostrar</div>
+					<div class="toabajo">
+						<div class="volverint btnSinborde btnSigPantMBSR">Saltar »</div>
+						<div class="checkB"><input type="checkbox" id="nomostrarmbsrintro"> no volver a mostrar</div>
+					</div>
 					<div class="bototneraBottom">
-						<div class="boxprem"><img src="img/boxpremium.png"></div>
 						<div class="btotonbotom btnHome"><i class="icon-iconHome"></i> Home</div>
 						<div class="btotonbotom btnLibreria"><i class="icon-iconLibreria fz22"></i> Libreria</div>
 						<div class="btotonbotom btnMSBR"><i class="icon-iconMBSR fz22"></i> MSBR</div>
@@ -428,7 +433,48 @@
 					<div class="contclases"></div>
 					<div class="volverint btnSinborde linkdeboton"><a href="#" onclick="window.open('https://www.mindfulnessbuenosaires.com/programas-mbsr', '_system'); return false;" target="_blank">Próximos programas</a></div>
 					<div class="bototneraBottom">
-						<div class="boxprem"><img src="img/boxpremium.png"></div>
+						<div class="btotonbotom btnHome"><i class="icon-iconHome"></i> Home</div>
+						<div class="btotonbotom btnLibreria"><i class="icon-iconLibreria fz22"></i> Libreria</div>
+						<div class="btotonbotom btnMSBR"><i class="icon-iconMBSR fz22"></i> MSBR</div>
+						<div class="btotonbotom btnPodcasts"><i class="icon-iconPodcast fz22"></i> Podcast</div>
+						<div class="btotonbotom btnUser"><i class="icon-iconUSer"></i> Usuario</div>
+					</div>
+				</div>
+			</div>
+			<div class="ventana hidden" id="pantalla12c">
+				<div class="contenidoGen">
+					<h4 class="titSeccionSub">MBSR</h4>
+					<div class="listetapas">
+						<div class="contesli2"></div>
+					</div>
+					<div class="volverint btnSinborde btnVolverapa" data-apa="pantalla12b">Volver</div>
+					<div class="bototneraBottom">
+						<div class="btotonbotom btnHome"><i class="icon-iconHome"></i> Home</div>
+						<div class="btotonbotom btnLibreria"><i class="icon-iconLibreria fz22"></i> Libreria</div>
+						<div class="btotonbotom btnMSBR"><i class="icon-iconMBSR fz22"></i> MSBR</div>
+						<div class="btotonbotom btnPodcasts"><i class="icon-iconPodcast fz22"></i> Podcast</div>
+						<div class="btotonbotom btnUser"><i class="icon-iconUSer"></i> Usuario</div>
+					</div>
+				</div>
+			</div>
+			<div class="ventana hidden" id="pantalla12d">
+				<div class="contenidoGen">
+					<h4 class="tituloClase2"></h4>
+					<div class="btnPlayMed ct_uad_MBSR vercel" onclick="togglePlaying('uad_MBSR')">
+						<div class="circmed vercel">
+							<div class="circsma vercel">
+								<i class="glyphicon glyphicon-play"></i>
+							</div>
+						</div>
+					</div>
+					<div class="circle audioBorde ab_uad_MBSR"></div>
+					<div id="uad_MBSR_control" class="circuloN"></div>
+					<audio ontimeupdate="updateBar('uad_MBSR')" id="uad_MBSR">
+						<source src="" type="audio/mpeg">
+						Su navegador no sorporta audio HTML5
+					</audio>
+					<div class="volverint btnSinborde btnVolverapa" data-apa="pantalla12c">Volver</div>
+					<div class="bototneraBottom conpub">
 						<div class="btotonbotom btnHome"><i class="icon-iconHome"></i> Home</div>
 						<div class="btotonbotom btnLibreria"><i class="icon-iconLibreria fz22"></i> Libreria</div>
 						<div class="btotonbotom btnMSBR"><i class="icon-iconMBSR fz22"></i> MSBR</div>
